...
  };

  const render = () => (
    <View style={styles.container}>
      <View style={styles.topCycleContainer}>
        <Button
          testID="fixesBtn"
          onPress={() => setFixSelected(true)}
          width={100}
          shape="circle"
          padding={0}
          outline={!fixSelected}>
          <Text
...
              color: fixSelected ? colors.accent : colors.dark,
            }}>
            Fixes
          </Text>
        </Button>
        <Button
          testID="fixRequestsBtn"
          onPress={() => setFixSelected(false)}
          width={150}
          shape="circle"
          padding={0}
          outline={fixSelected}>
          <Text
...
